--- a/frontend/src/pages/Editor/Editor.scss
+++ b/frontend/src/pages/Editor/Editor.scss
@@ -43,6 +43,7 @@
   height: 600px;
   background-repeat: no-repeat;
   background-size: auto 100%;
+  background-position: center center;
   position: relative;
   pointer-events: none;
   transition: height 0.5s 1s ease-in-out;
